--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,8 @@ html{
 }
 body{
     background-image: url(../img/bg-tablet-pattern.svg);
+    background-size: 60%;
+    background-repeat: no-repeat;
 }
 header{
     display: flex;
@@ -23,11 +25,48 @@ header ul li{
     border-color: #F3603B;
     border-radius: 20px;
     padding:0.5% 1%;
+    
 }
 .get a{
     color: white;
     text-decoration: none;
 }
+.get-1{
+    background-color: #F3603B;
+    border-color: #F3603B;
+    border-radius: 20px;
+    padding:1.5% 3%;  
+    margin-top: 5%;
+}
+.get-1 a{
+    color: white;
+    text-decoration: none;
+}
+.get-2{
+    background-color: #F3603B;
+    border-color: #F3603B;
+    border-radius: 20px;
+    padding:0.5% 1%;  
+    margin: 5% 45%;
+}
+.get-2 a{
+    color: white;
+    text-decoration: none;
+}
+.get-3{
+    background-color: white;
+    border-color:white ;
+    border-radius: 20px;
+    height: 40px;
+    width: 8%;
+    
+    
+}
+.get-3 a{
+    color: black;
+    text-decoration: none;
+}
+
 #banner{
     border: solid 4px blue;
     display: flex;
@@ -37,4 +76,159 @@ header ul li{
 #banner h1{
     color: #232C50;
     font-size: 3.5rem;
+}
+#beneficios{
+    display: flex;
+    border: solid 3px purple;
+    padding-top: 5%;
+}
+#beneficios article{
+    width: 50%;
+    border: solid 3px yellow;   
+}
+#beneficios article h2{
+    color: #232C50;
+    font-size: 2rem;
+    padding-left: 18%;
+    margin-top: -2%;
+}
+#beneficios article p{
+    line-height:150%;
+    padding-left: 18%;
+    margin-top: -2%;
+}
+#beneficios .contenedor{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    background-color:#F3603B;
+    width: 15%;
+    height: 6%;
+    margin-left: 28%;
+    border-radius: 25px;
+    border:solid red 3px;
+}
+#beneficios .contenedor .num{
+   justify-content: center;
+   margin-top: 8%;
+   color: white;
+}
+#beneficios .contenido{
+    width: 100%;
+    color: #B3B2B7;
+    line-height: 180%;
+    padding-left: 50%;
+    margin-top: -12.5%;
+    border:solid green 3px;
+}
+#beneficios .contenido h3{
+    color: #323851;
+}
+#contenedor-cards{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 5%;
+    border: solid 3px blue;
+}
+#tarjetas{
+    margin-top: 5%;
+    border:solid 3px goldenrod;
+}
+#tarjetas h2{
+    color: #232C50;
+    font-size: 2rem;
+    text-align: center;
+    
+}
+section .cards{
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    background-color: #FAFAFA;
+    border: solid 3px black;
+    align-items: center;
+}
+section .cards img{
+    width: 60px;
+    margin-top: -6%;
+}
+.cards h3{
+    color: #3F4868;
+}
+.cards p{
+    color: #B9B9C1;
+    text-align: center;
+    line-height: 150%;
+}
+#banner-final{
+    background-color:#F3603B;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 5%;
+    padding: 2% 9%;
+    border: solid 3px blue;
+}
+#banner-final h2{
+    color: white;
+    font-weight: 500;
+    font-size:1.7rem;
+    border: solid 3px blue;
+    
+}
+.get-3{
+    background-color: white;
+    border-color:white ;
+    border-radius: 20px;
+    height: 40px;
+    width: 9%;
+    border: solid 3px blue;
+    
+    
+}
+.get-3 a{
+    color: #F3603B;
+    text-decoration: none;
+}
+footer{
+    display: flex;
+    justify-content: space-around;
+    background-color:#1E1E26 ;
+    border: solid 3px lightseagreen;
+}
+#social-media{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    border:lime solid 3px;
+    width: 25%;
+    padding: 1% 0;
+}
+#logo-footer{
+    width: 30%;
+}
+footer nav{
+    display: flex;
+    
+}
+#lista-1{
+    border:rgb(250, 6, 140) solid 3px;
+    margin-left: -80%;
+    
+}
+#lista-2{
+    border:rgb(241, 199, 9) solid 3px;
+    margin-left: 80%;
+}
+#formulario-footer{
+    border:rgb(255, 10, 10) solid 3px;
+    width: 25%;
+}
+footer form{
+    border:rgb(102, 241, 9) solid 3px;
+
+}
+footer p{
+    border:rgb(9, 71, 241) solid 3px;
 }
